# func_adl_type_generator

./: README.md  pyproject.toml
.github/actions/: build-types.yaml
.github/actions/build-types/: action.yaml
.github/actions/determine-tag/: action.yaml
.github/workflows/: release.yaml
func_adl_type_generator/: atlas_release_type_builder.py
