[project]
name = "func_adl_type_generator"
version = "0.1.0"
description = "Commands for working with func_adl types"
license = { text = "MIT" }
authors = [{ name = "Gordon Watts <gwatts@uw.edu>" }]

dependencies = ["rich"]

[project.optional-dependencies]
test = ["black", "flake8"]

[project.scripts]
atlas_release_type_builder = "func_adl_type_generator.atlas_release_type_builder:main"
