[project]
name = "func_adl_type_generator"
version = "0.1.0"
description = "Commands for working with func_adl types"
license = { text = "MIT" }
authors = [{ name = "Gordon Watts <gwatts@uw.edu>" }]

dependencies = ["rich"]

[project.optional-dependencies]
test = ["black", "flake8"]

[project.scripts]
atlas_release_type_builder = "func_adl_type_generator.atlas_release_type_builder:main"

[tool.setuptools.packages.find]
where = ["."] # list of folders that contain the packages (["."] by default)
include = [
    "func_adl_type_generator",
] # package names should match these glob patterns (["*"] by default)
exclude = [] # exclude packages matching these glob patterns (empty by default)
namespaces = false # to disable scanning PEP 420 namespaces (true by default)
